<resources>
    <string name="app_name">MiniTwitter</string>

    <!-- Screen Login -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="txt_create_account">If you have not account, register here</string>

    <!-- Screen SignUp -->
    <string name="hint_username">Username</string>
    <string name="txt_login_note">If you have a account, login here</string>
    <string name="btn_signup">Sign Up</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- toolbar_title_home -->
    <string name="toolbar_title_home">Title</string>

    <!-- Dialog Tweet -->
    <string name="dialog_close">Tweeter</string>
    <string name="dialog_messege">What\'s going on?</string>
    <string name="dialog_message_confirm">Are you sure to drop this tweet?</string>
    <string name="dialog_title_confirm">Cancel Tweet</string>
    <string name="dialog_btn_delete_confirm">OK, Fine</string>
    <string name="dialog_btn_cancel_confirm">Cancel</string>

    <!-- BottomSheet -->
    <string name="bottom_sheet_delete">Delete Tweet</string>

    <!-- Profile -->
    <string name="profile_edt_username">Username</string>
    <string name="profile_edt_email">Email</string>
    <string name="profile_edt_website">Website</string>
    <string name="profile_edt_description">Description and Jobs</string>
    <string name="profile_edt_password">Password Current</string>
    <string name="profile_btn_save">Save</string>
    <string name="profile_btn_change_pass">Change Password</string>

</resources>
