<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/imgLogo_signup"
        android:layout_width="300dp"
        android:layout_height="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_logo_minitwitter_white"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <EditText
        android:id="@+id/signupUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:layout_marginTop="36dp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorBlueDark"
        android:textColorHint="@color/colorBlueDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/imgLogo_signup"
        app:layout_constraintLeft_toLeftOf="@id/imgLogo_signup"
        app:layout_constraintRight_toRightOf="@id/imgLogo_signup"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/signupEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorBlueDark"
        android:textColorHint="@color/colorBlueDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/signupUsername"
        app:layout_constraintLeft_toLeftOf="@id/signupUsername"
        app:layout_constraintRight_toRightOf="@id/signupUsername"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <EditText
        android:id="@+id/signupPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorBlueDark"
        android:textColorHint="@color/colorBlueDark"
        android:textColorLink="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/signupEmail"
        app:layout_constraintLeft_toLeftOf="@id/signupEmail"
        app:layout_constraintRight_toRightOf="@id/signupEmail"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_signup"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@id/signupPassword"
        app:layout_constraintLeft_toLeftOf="@id/signupPassword"
        app:layout_constraintRight_toRightOf="@id/signupPassword"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/txtLoginGo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_login_note"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/btnSignUp"
        app:layout_constraintLeft_toLeftOf="@id/btnSignUp"
        app:layout_constraintRight_toRightOf="@id/btnSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>